--- a/js_sandbox/data_types/index.html
+++ b/js_sandbox/data_types/index.html
@@ -6,9 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Data types</h1>
-    <script src="app.js">
-
+    <!-- h1>Data types</h1>
+    <script src="dataTypes.js"></script -->
+        <!-- h1>Type Conversions</h1>
+    <script src="typeConversions.js"></script -->
+    <script src="math.js">
     </script>
+    <h1>Math</h1>
 </body>
 </html>
