--- a/js_sandbox/data_types/index.html
+++ b/js_sandbox/data_types/index.html
@@ -10,8 +10,10 @@
     <script src="dataTypes.js"></script -->
         <!-- h1>Type Conversions</h1>
     <script src="typeConversions.js"></script -->
-    <script src="math.js">
+    <!-- script src="math.js">
     </script>
-    <h1>Math</h1>
+    <h1>Math</h1 -->
+    <script src="stringConcatenation.js"></script>
+    <h1>String Concatenation</h1>
 </body>
 </html>
