--- a/js_sandbox/data_types/index.html
+++ b/js_sandbox/data_types/index.html
@@ -13,7 +13,9 @@
     <!-- script src="math.js">
     </script>
     <h1>Math</h1 -->
-    <script src="stringConcatenation.js"></script>
-    <h1>String Concatenation</h1>
+    <!-- script src="stringConcatenation.js"></script>
+    <h1>String Concatenation</h1 -->
+    <script src="templateLiterals.js"></script>
+    <h1>Template Literals</h1>
 </body>
 </html>
