--- a/js_sandbox/fundamentals/index.html
+++ b/js_sandbox/fundamentals/index.html
@@ -15,7 +15,9 @@
     <h1>Math</h1 -->
     <!-- script src="stringConcatenation.js"></script>
     <h1>String Concatenation</h1 -->
-    <script src="templateLiterals.js"></script>
-    <h1>Template Literals</h1>
+    <!-- script src="templateLiterals.js"></script>
+    <h1>Template Literals</h1 -->
+    <script src="arrays.js"></script>
+    <h1>Arrays</h1>
 </body>
 </html>
