--- a/js_sandbox/fundamentals/index.html
+++ b/js_sandbox/fundamentals/index.html
@@ -17,7 +17,9 @@
     <h1>String Concatenation</h1 -->
     <!-- script src="templateLiterals.js"></script>
     <h1>Template Literals</h1 -->
-    <script src="arrays.js"></script>
-    <h1>Arrays</h1>
+    <!-- <script src="arrays.js"></script>
+    <h1>Arrays</h1> -->
+    <script src="objectLiterals.js"></script>
+    <h1>Object Literals</h1>
 </body>
 </html>
