--- a/js_sandbox/fundamentals/index.html
+++ b/js_sandbox/fundamentals/index.html
@@ -19,7 +19,9 @@
     <h1>Template Literals</h1 -->
     <!-- <script src="arrays.js"></script>
     <h1>Arrays</h1> -->
-    <script src="objectLiterals.js"></script>
-    <h1>Object Literals</h1>
+    <!-- <script src="objectLiterals.js"></script>
+    <h1>Object Literals</h1> -->
+    <script src="datesAndTimes.js"></script>
+    <h1>Dates & Times</h1>
 </body>
 </html>
