--- a/js_sandbox/fundamentals/index.html
+++ b/js_sandbox/fundamentals/index.html
@@ -21,7 +21,9 @@
     <h1>Arrays</h1> -->
     <!-- <script src="objectLiterals.js"></script>
     <h1>Object Literals</h1> -->
-    <script src="datesAndTimes.js"></script>
-    <h1>Dates & Times</h1>
+    <!-- <script src="datesAndTimes.js"></script>
+    <h1>Dates & Times</h1> -->
+    <script src="ifAndComparisonOperators.js"></script>
+    <h1>If Statements and Comparison Operators</h1>
 </body>
 </html>
