--- a/js_sandbox/fundamentals/index.html
+++ b/js_sandbox/fundamentals/index.html
@@ -27,7 +27,9 @@
     <h1>If Statements and Comparison Operators</h1> -->
     <!-- <script src="switch.js"></script>
     <h1>Switches</h1> -->
-    <script src="functions.js"></script>
-    <h1>Functions</h1>
+    <!-- <script src="functions.js"></script>
+    <h1>Functions</h1> -->
+    <script src="loops.js"></script>
+    <h1>Loops</h1>
 </body>
 </html>
