--- a/js_sandbox/fundamentals/index.html
+++ b/js_sandbox/fundamentals/index.html
@@ -29,7 +29,10 @@
     <h1>Switches</h1> -->
     <!-- <script src="functions.js"></script>
     <h1>Functions</h1> -->
-    <script src="loops.js"></script>
-    <h1>Loops</h1>
+    <!-- <script src="loops.js"></script>
+    <h1>Loops</h1> -->
+    <script src="windowObject.js"></script>
+    <h1>The Window Object that contains the DOM</h1>
+    <div style="margin-top: 1200px;"></div>
 </body>
 </html>
