--- a/js_sandbox/fundamentals/index.html
+++ b/js_sandbox/fundamentals/index.html
@@ -31,8 +31,10 @@
     <h1>Functions</h1> -->
     <!-- <script src="loops.js"></script>
     <h1>Loops</h1> -->
-    <script src="windowObject.js"></script>
+    <!-- <script src="windowObject.js"></script>
     <h1>The Window Object that contains the DOM</h1>
-    <div style="margin-top: 1200px;"></div>
+    <div style="margin-top: 1200px;"></div> -->
+    <script src="blockScopeLetConst.js"></script>
+    <h1>Block Scope with 'let' and 'const'</h1>
 </body>
 </html>
