DOM Traversal of nodes and elements

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -30,7 +30,7 @@
           </div>
           <div class="card-action">
             <h5 id="task-title" class="test">Tasks</h5>
-            <div class="collection-item">test</div>
+            <!-- <div class="collection-item">test</div> -->
             <ul class="collection">
               <li class="collection-item">
                 List Item
@@ -73,7 +73,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   <!-- <script src="documentObject.js"></script> -->
   <!-- <script src="singularDOMSelectors.js"></script> -->
-  <script src="multiDOMSelectors.js"></script>
+  <!-- <script src="multiDOMSelectors.js"></script> -->
+  <script src="DOMTraversal.js"></script>
 </body>
 
 </html>
