DOM stuff I never commited... woops

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -74,7 +74,8 @@
   <!-- <script src="documentObject.js"></script> -->
   <!-- <script src="singularDOMSelectors.js"></script> -->
   <!-- <script src="multiDOMSelectors.js"></script> -->
-  <script src="DOMTraversal.js"></script>
+  <!-- <script src="DOMTraversal.js"></script> -->
+  <script src="creatingElements.js"></script>
 </body>
 
 </html>
