revisited the fundamentals

--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -17,8 +17,8 @@
     <h1>String Concatenation</h1 -->
     <!-- script src="templateLiterals.js"></script>
     <h1>Template Literals</h1 -->
-    <!-- <script src="arrays.js"></script>
-    <h1>Arrays</h1> -->
+    <!-- <script src="arrays.js"></script> -->
+    <!-- <h1>Arrays</h1> -->
     <!-- <script src="objectLiterals.js"></script>
     <h1>Object Literals</h1> -->
     <!-- <script src="datesAndTimes.js"></script>
@@ -27,14 +27,14 @@
     <h1>If Statements and Comparison Operators</h1> -->
     <!-- <script src="switch.js"></script>
     <h1>Switches</h1> -->
-    <!-- <script src="functions.js"></script>
-    <h1>Functions</h1> -->
+    <!-- <script src="functions.js"></script> -->
+    <!-- <h1>Functions</h1> -->
     <!-- <script src="loops.js"></script>
     <h1>Loops</h1> -->
-    <!-- <script src="windowObject.js"></script>
+    <script src="windowObject.js"></script>
     <h1>The Window Object that contains the DOM</h1>
-    <div style="margin-top: 1200px;"></div> -->
-    <script src="blockScopeLetConst.js"></script>
-    <h1>Block Scope with 'let' and 'const'</h1>
+    <div style="margin-top: 1200px;"></div>
+    <!-- <script src="blockScopeLetConst.js"></script> -->
+    <!-- <h1>Block Scope with 'let' and 'const'</h1> -->
 </body>
 </html>
