--- a/DOM/index.html
+++ b/DOM/index.html
@@ -29,8 +29,7 @@
             </form>
           </div>
           <div class="card-action">
-            <h5 id="task-title" class="test">Tasks</h5>
-            <!-- <div class="collection-item">test</div> -->
+            <h5 id="task-title">Tasks</h5>
             <ul class="collection">
               <li class="collection-item">
                 List Item
@@ -71,10 +70,6 @@
   </div>
   <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-  <!-- <script src="documentObject.js"></script> -->
-  <!-- <script src="singularDOMSelectors.js"></script> -->
-  <!-- <script src="multiDOMSelectors.js"></script> -->
-  <!-- <script src="DOMTraversal.js"></script> -->
   <script src="creatingElements.js"></script>
 </body>
 
