--- a/DOM/index.html
+++ b/DOM/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css"> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
     crossorigin="anonymous">
   <title>Task List</title>
@@ -19,18 +19,13 @@
           <div class="card-content">
             <span class="card-title">Task List</span>
             <div class="row">
-              <form id="task-form">
+              <form id="task-form" action="#">
                 <div class="input-field col s12">
                   <input type="text" name="task" id="task" value="Walk the dog">
                   <label for="task">New Task</label>
                 </div>
-            <select>
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-            </select>
             </div>
-            <input type="submit" value="Add Task" class="btn">
+            <input id="submit-btn" type="submit" value="Add Task" class="btn">
             </form>
           </div>
           <div class="card-action">
@@ -75,7 +70,7 @@
   </div>
   <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-  <script src="keyboardInputEvents.js"></script>
+  <script src="keyboardEventPractice.js"></script>
 </body>
 
 </html>
