--- a/DOM/index.html
+++ b/DOM/index.html
@@ -70,7 +70,7 @@
   </div>
   <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-  <script src="eventBubblingDelegationPractice.js"></script>
+  <script src="localAndSessionStorage.js"></script>
 </body>
 
 </html>
