added delete feature ahead of brad traversy's implementation

--- a/TaskList/index.html
+++ b/TaskList/index.html
@@ -29,9 +29,8 @@
                         <h5 id="task-title"></h5>
                         <input type="text" name="filter" id="filter">
                         <label for="filter">Filter Tasks</label>
-                        <ul class="collection">
-                            <a href="#" class="clear-tasks btn black">Clear Tasks</a>
-                        </ul>
+                        <ul class="collection"></ul>
+                        <a href="#" class="clear-tasks btn black">Clear Tasks</a>
                     </div>
                 </div>
             </div>
