added loader gif and results section showing up after click

--- a/LoanCalculator/index.html
+++ b/LoanCalculator/index.html
@@ -37,13 +37,13 @@
               </div>
             </form>
             <!-- LOADER -->
-            <!--
-            <div id="loading">
+            
+            <div id="loading" style="display: none;">
               <img src="img/loading.gif" alt="">
             </div>
-            -->
+            
             <!-- RESULTS -->
-            <div id="results" class="pt-4">
+            <div id="results" class="pt-4" style="display: none;">
               <h5>Results</h5>
               <div class="form-group">
                 <div class="input-group">
