--- a/NumberGuesser/index.html
+++ b/NumberGuesser/index.html
@@ -11,9 +11,12 @@
   <div class="container">
     <h1>Number Guesser</h1>
     <div id="game">
-      <p>Guess a number between <span class="min-num">1</span> and <span class="max-num">10</span></p>
+      <!-- using span as a hook for dynamic templating -->
+      <p>Guess a number between <span class="min-num">1</span>
+        and <span class="max-num">10</span>
+      </p>
       <input type="number" id="guess-input" placeholder="Enter your guess...">
-      <input type="submit" value="Submit" id="guess-value">
+      <input type="submit" value="Submit" id="guess-submit">
       <p class="message"></p>
     </div>
   </div>
