created an app object to manage settings, app data, app methods, and pure functions as an organizational structure

--- a/NumberGuesser/index.html
+++ b/NumberGuesser/index.html
@@ -12,8 +12,8 @@
     <h1>Number Guesser</h1>
     <div id="game">
       <!-- using span as a hook for dynamic templating -->
-      <p>Guess a number between <span class="min-num">1</span>
-        and <span class="max-num">10</span>
+      <p id="user-instructions">Guess a number between <span class="min-num"></span>
+        and <span class="max-num"></span>
       </p>
       <input type="number" id="guess-input" placeholder="Enter your guess...">
       <input type="submit" value="Submit" id="guess-submit">
