--- a/experiments/DataBinding/index.html
+++ b/experiments/DataBinding/index.html
@@ -10,6 +10,19 @@
 <body>
     <div class="container">
         <h1>Data Binding Experiment</h1>
+        <div class="container">
+        <h2>2 way binding</h2>
+        <div class="row">
+            <div class="six columns" id="left-group">
+                <input type="text" name="left" id="left">
+                <input type="submit" value="send to right">
+            </div>
+            <div class="six columns" id="right-group">
+                <input type="text" name="right" id="right">
+                <input type="submit" value="send to left">
+            </div>
+        </div>
+        </div>
     </div>
 
     <script src="app.js"></script>
