--- a/OOP/index.html
+++ b/OOP/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Object Oriented Programming</h1>
     <div style="margin-top: 1200px;"></div>
-    <script src="builtinConstructors.js"></script>
+    <!-- <script src="builtinConstructors.js"></script> -->
+    <script src="thisKeywordAndConstructors.js"></script>
 </body>
 </html>
