--- a/OOP/index.html
+++ b/OOP/index.html
@@ -9,6 +9,7 @@
     <h1>Object Oriented Programming</h1>
     <div style="margin-top: 1200px;"></div>
     <!-- <script src="builtinConstructors.js"></script> -->
-    <script src="thisKeywordAndConstructors.js"></script>
+    <!-- <script src="thisKeywordAndConstructors.js"></script> -->
+    <script src="prototypes.js"></script>
 </body>
 </html>
