prototype inheritance procedure and independent practice.

--- a/OOP/index.html
+++ b/OOP/index.html
@@ -10,6 +10,7 @@
     <div style="margin-top: 1200px;"></div>
     <!-- <script src="builtinConstructors.js"></script> -->
     <!-- <script src="thisKeywordAndConstructors.js"></script> -->
-    <script src="prototypes.js"></script>
+    <!-- <script src="prototypes.js"></script> -->
+    <script src="prototypeInheritance.js"></script>
 </body>
 </html>
