alternative object creation with prototypes

--- a/OOP/index.html
+++ b/OOP/index.html
@@ -11,6 +11,7 @@
     <!-- <script src="builtinConstructors.js"></script> -->
     <!-- <script src="thisKeywordAndConstructors.js"></script> -->
     <!-- <script src="prototypes.js"></script> -->
-    <script src="prototypeInheritance.js"></script>
+    <!-- <script src="prototypeInheritance.js"></script> -->
+    <script src="objectCreate.js"></script>
 </body>
 </html>
