using ES6 classes

--- a/OOP/index.html
+++ b/OOP/index.html
@@ -12,6 +12,9 @@
     <!-- <script src="thisKeywordAndConstructors.js"></script> -->
     <!-- <script src="prototypes.js"></script> -->
     <!-- <script src="prototypeInheritance.js"></script> -->
-    <script src="objectCreate.js"></script>
+    <!-- <script src="objectCreate.js"></script> -->
+    <!-- <script src="es6Classes.js"></script> -->
+    <script src="es6ClassInheritance.js"></script>
+
 </body>
 </html>
