add html content structure with skeleton css

--- a/BookList/index.html
+++ b/BookList/index.html
@@ -23,6 +23,9 @@
                 <label for="isbn">ISBN</label>
                 <input type="text" id="isbn" class="u-full-width">
             </div>
+            <div>
+                <input type="submit" value="Add Book">
+            </div>
         </form>
         <hr>
         <table class="u-full-width">
@@ -31,7 +34,7 @@
                     <th>Title</th>
                     <th>Author</th>
                     <th>ISBN</th>
-                    <th>DELETE BUTTON GOES HERE</th>
+                    <th>delete</th>
                 </tr>
             </thead>
             <tbody id="books-collection">
