enable the deletion of all books from app and ui

--- a/BookList/index.html
+++ b/BookList/index.html
@@ -29,6 +29,7 @@
         </form>
         <hr>
         <table class="u-full-width">
+            <button id="clear-books">Clear All</button>
             <thead>
                 <tr>
                     <th>Title</th>
