delete selected element by filter

--- a/BookList/index.html
+++ b/BookList/index.html
@@ -39,12 +39,7 @@
                 </tr>
             </thead>
             <tbody id="books-collection">
-                <!-- <tr>
-                    <td>To Kill A Mockingbird</td>
-                    <td>Harper Lee</td>
-                    <td>12345</td>
-                    <td><a>delete</a></td>
-                </tr> -->
+                <!-- dynamically inserted data-->
             </tbody>
         </table>
     </div>
