--- a/asyncAndFetch/index.html
+++ b/asyncAndFetch/index.html
@@ -14,6 +14,6 @@
     <div id="output"></div>
   </div>
 
-  <script src="app.js"></script>
+  <script src="xhrObjectAndFetchAPI.js"></script>
 </body>
 </html>
