set up lesson for ajax and JSON

--- a/asyncAndFetch/indexXHRObjectAndFetchAPI.html
+++ b/asyncAndFetch/indexXHRObjectAndFetchAPI.html
@@ -9,15 +9,11 @@
 </head>
 <body>
   <div class="container">
-    <button id="button1">Get Customer</button>
-    <button id="button2">Get Customers</button>
+    <button id="button">Get Data</button>
     <br><br>
-    <h1>Customer</h1>  
-    <div id="customer"></div>
-    <h1>Customers</h1>  
-    <div id="customers"></div>
+    <div id="output"></div>
   </div>
 
-  <script src="ajaxAndJSON.js"></script>
+  <script src="xhrObjectAndFetchAPI.js"></script>
 </body>
 </html>
