connected all architectural pieces: DOM & Web API to the App; created event listener on the form for user input

--- a/ChuckNorrisJokes/index.html
+++ b/ChuckNorrisJokes/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <h2>Chuck Norris Joke Generator</h2>
-    <form id="joke-form">
+    <form action="#" id="joke-form">
       <div>
         <label for="number">Number of jokes</label>
         <input type="number" id="number">
