--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -31,7 +31,7 @@
     <!-- <h1>Functions</h1> -->
     <!-- <script src="loops.js"></script>
     <h1>Loops</h1> -->
-    <script src="windowObject.js"></script>
+    <script src="arrowFunctions.js"></script>
     <h1>The Window Object that contains the DOM</h1>
     <div style="margin-top: 1200px;"></div>
     <!-- <script src="blockScopeLetConst.js"></script> -->
