--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -31,10 +31,12 @@
     <!-- <h1>Functions</h1> -->
     <!-- <script src="loops.js"></script>
     <h1>Loops</h1> -->
-    <script src="arrowFunctions.js"></script>
-    <h1>The Window Object that contains the DOM</h1>
-    <div style="margin-top: 1200px;"></div>
+    <!-- <script src="arrowFunctions.js"></script>
+    <h1>The Window Object that contains the DOM</h1> -->
+    <!-- <div style="margin-top: 1200px;"></div> -->
     <!-- <script src="blockScopeLetConst.js"></script> -->
     <!-- <h1>Block Scope with 'let' and 'const'</h1> -->
+    <script src="errorHandling.js"></script>
+    <h1>Error Handling</h1>
 </body>
 </html>
