--- a/RegularExpressions/index.html
+++ b/RegularExpressions/index.html
@@ -7,8 +7,9 @@
     <title>Regular Expressions</title>
 </head>
 <body>
-    <h1>Regular Expressions</h1>
+    <h1>Meta Character Symbols</h1>
     
-    <script src="regex.js"></script>
+    <!-- <script src="regex.js"></script> -->
+    <script src="metacharacterSymbols.js"></script>
 </body>
 </html>
