character sets and quantifiers

--- a/RegularExpressions/index.html
+++ b/RegularExpressions/index.html
@@ -7,9 +7,10 @@
     <title>Regular Expressions</title>
 </head>
 <body>
-    <h1>Meta Character Symbols</h1>
+    <h1>Character Sets and Quantifiers</h1>
     
     <!-- <script src="regex.js"></script> -->
-    <script src="metacharacterSymbols.js"></script>
+    <!-- <script src="metacharacterSymbols.js"></script> -->
+    <script src="charsetsQuantifiers.js"></script>
 </body>
 </html>
