character classes with regular expressions

--- a/RegularExpressions/index.html
+++ b/RegularExpressions/index.html
@@ -7,10 +7,11 @@
     <title>Regular Expressions</title>
 </head>
 <body>
-    <h1>Character Sets and Quantifiers</h1>
+    <h1>Short-Hand Character Classes</h1>
     
     <!-- <script src="regex.js"></script> -->
     <!-- <script src="metacharacterSymbols.js"></script> -->
-    <script src="charsetsQuantifiers.js"></script>
+    <!-- <script src="charsetsQuantifiers.js"></script> -->
+    <script src="characterClasses.js"></script>
 </body>
 </html>
