iterators and generators

--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -36,7 +36,8 @@
     <!-- <div style="margin-top: 1200px;"></div> -->
     <!-- <script src="blockScopeLetConst.js"></script> -->
     <!-- <h1>Block Scope with 'let' and 'const'</h1> -->
-    <script src="errorHandling.js"></script>
-    <h1>Error Handling</h1>
+    <!-- <script src="errorHandling.js"></script>
+    <h1>Error Handling</h1> -->
+    <script src="iteratorsGenerators.js"></script>
 </body>
 </html>
