quick lesson on Symbols

--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -38,6 +38,9 @@
     <!-- <h1>Block Scope with 'let' and 'const'</h1> -->
     <!-- <script src="errorHandling.js"></script>
     <h1>Error Handling</h1> -->
-    <script src="iteratorsGenerators.js"></script>
+    <!-- <script src="iteratorsGenerators.js"></script>
+    <h1>Iterators & Generators</h1> -->
+    <h1>Symbols</h1>
+    <script src="symbols.js"></script>
 </body>
 </html>
