--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -40,7 +40,9 @@
     <h1>Error Handling</h1> -->
     <!-- <script src="iteratorsGenerators.js"></script>
     <h1>Iterators & Generators</h1> -->
-    <h1>Symbols</h1>
-    <script src="symbols.js"></script>
+    <!-- <h1>Symbols</h1>
+    <script src="symbols.js"></script> -->
+    <h1>Destructuring Assignment</h1>
+    <script src="destructuring.js"></script>
 </body>
 </html>
