learning and experimenting with maps

--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -42,7 +42,9 @@
     <h1>Iterators & Generators</h1> -->
     <!-- <h1>Symbols</h1>
     <script src="symbols.js"></script> -->
-    <h1>Destructuring Assignment</h1>
-    <script src="destructuring.js"></script>
+    <!-- <h1>Destructuring Assignment</h1>
+    <script src="destructuring.js"></script> -->
+    <h1>Maps</h1>
+    <script src="maps.js"></script>
 </body>
 </html>
