--- a/fundamentals/index.html
+++ b/fundamentals/index.html
@@ -44,7 +44,9 @@
     <script src="symbols.js"></script> -->
     <!-- <h1>Destructuring Assignment</h1>
     <script src="destructuring.js"></script> -->
-    <h1>Maps</h1>
-    <script src="maps.js"></script>
+    <!-- <h1>Maps</h1>
+    <script src="maps.js"></script> -->
+    <h1>Sets</h1>
+    <script src="sets.js"></script>
 </body>
 </html>
